fix(Header): scroll bar was shifting VoteSub logo when it was shown
In simple words scroll bar was causing DOM shift

--- a/src/components/Header/Header.style.scss
+++ b/src/components/Header/Header.style.scss
@@ -1,5 +1,5 @@
 #header {
-    width: 100%;
+    width: 100vw;
     height: 60px;
     background-color: #fff;
     border-bottom-left-radius: 15px;
